--- a/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
+++ b/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
@@ -1229,6 +1229,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ark-r0-hne">
                                 <rect key="frame" x="16" y="421" width="343" height="238"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="238" id="MDy-Zh-XXo"/>
                                 </constraints>
@@ -1238,9 +1239,15 @@
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DYZ-H0-qVr">
                                 <rect key="frame" x="0.0" y="72" width="375" height="341"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="5Xr-EN-i82" appends="YES" id="LXC-Ps-ef6"/>
+                                    <outletCollection property="gestureRecognizers" destination="psF-Zz-d87" appends="YES" id="ho2-vz-fQX"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="ark-r0-hne" firstAttribute="leading" secondItem="aR5-mb-o1U" secondAttribute="leadingMargin" id="4JE-9W-P2m"/>
                             <constraint firstItem="DYZ-H0-qVr" firstAttribute="leading" secondItem="aR5-mb-o1U" secondAttribute="leading" id="6ra-vx-RM4"/>
@@ -1257,6 +1264,16 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UrN-4h-gh8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer cancelsTouchesInView="NO" direction="right" id="5Xr-EN-i82">
+                    <connections>
+                        <action selector="rightSwipe:" destination="YYZ-by-I7a" id="JfZ-Q0-6jj"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer cancelsTouchesInView="NO" direction="left" id="psF-Zz-d87">
+                    <connections>
+                        <action selector="swipeLeft:" destination="YYZ-by-I7a" id="aw3-KX-dSv"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="5541.6000000000004" y="-3522.1889055472266"/>
         </scene>
@@ -1374,11 +1391,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Are the leaves palmate, pinnate, or double pinnate?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPg-8g-nBF">
-                                <rect key="frame" x="16" y="72" width="347" height="61"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="61" id="zxV-LZ-laI"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are the leaves palmate, pinnate, or double pinnate?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPg-8g-nBF">
+                                <rect key="frame" x="16" y="72" width="347" height="69"/>
                                 <fontDescription key="fontDescription" name="DevanagariSangamMN" family="Devanagari Sangam MN" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1418,15 +1432,18 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Cpe-bz-ZYE" secondAttribute="trailing" constant="97" id="3Ma-g4-DyN"/>
                             <constraint firstItem="xk4-kU-BZR" firstAttribute="top" secondItem="JqA-r6-2C2" secondAttribute="bottom" constant="12" id="424-eZ-RqZ"/>
+                            <constraint firstItem="xPg-8g-nBF" firstAttribute="leading" secondItem="WZR-7Y-fgE" secondAttribute="leadingMargin" id="4lm-SF-E6d"/>
                             <constraint firstItem="bUF-rf-YHg" firstAttribute="top" secondItem="WZR-7Y-fgE" secondAttribute="top" constant="141" id="8Tu-Ok-hnm"/>
                             <constraint firstAttribute="trailing" secondItem="bUF-rf-YHg" secondAttribute="trailing" constant="64" id="9gu-QR-tgw"/>
                             <constraint firstItem="pg0-LV-Nb8" firstAttribute="centerX" secondItem="Cpe-bz-ZYE" secondAttribute="centerX" id="9jt-By-BL5"/>
-                            <constraint firstItem="xPg-8g-nBF" firstAttribute="top" secondItem="1B0-Km-N9C" secondAttribute="bottom" constant="8" symbolic="YES" id="DyU-0b-lYl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xPg-8g-nBF" secondAttribute="trailing" constant="-4" id="AQw-nw-5nn"/>
                             <constraint firstItem="wIw-Ky-0Ck" firstAttribute="centerX" secondItem="tjY-Xq-cG3" secondAttribute="centerX" id="E4e-EC-wYM"/>
                             <constraint firstItem="wIw-Ky-0Ck" firstAttribute="firstBaseline" secondItem="pg0-LV-Nb8" secondAttribute="firstBaseline" id="HkO-5B-dgF"/>
+                            <constraint firstItem="bUF-rf-YHg" firstAttribute="top" secondItem="xPg-8g-nBF" secondAttribute="bottom" id="HzS-zA-SXp"/>
                             <constraint firstItem="Cpe-bz-ZYE" firstAttribute="top" secondItem="bUF-rf-YHg" secondAttribute="bottom" constant="27" id="Iwd-yh-QLC"/>
                             <constraint firstAttribute="trailing" secondItem="UV5-gF-SK1" secondAttribute="trailing" id="Jml-ok-1Vd"/>
                             <constraint firstItem="tjY-Xq-cG3" firstAttribute="top" secondItem="bUF-rf-YHg" secondAttribute="bottom" constant="27" id="MkS-uf-j5j"/>
+                            <constraint firstItem="xPg-8g-nBF" firstAttribute="top" secondItem="1B0-Km-N9C" secondAttribute="bottom" constant="8" symbolic="YES" id="Or8-Sb-CpX"/>
                             <constraint firstItem="pg0-LV-Nb8" firstAttribute="top" secondItem="Cpe-bz-ZYE" secondAttribute="bottom" constant="8" symbolic="YES" id="PnT-55-Czh"/>
                             <constraint firstItem="UV5-gF-SK1" firstAttribute="bottom" secondItem="4k6-FQ-F4O" secondAttribute="top" id="Q0F-Gp-b0s"/>
                             <constraint firstItem="UV5-gF-SK1" firstAttribute="leading" secondItem="WZR-7Y-fgE" secondAttribute="leading" id="QYt-a8-1Ap"/>
@@ -1437,7 +1454,6 @@
                             <constraint firstItem="wIw-Ky-0Ck" firstAttribute="baseline" secondItem="pg0-LV-Nb8" secondAttribute="baseline" id="f2B-0Z-1MN"/>
                             <constraint firstItem="JqA-r6-2C2" firstAttribute="centerX" secondItem="xk4-kU-BZR" secondAttribute="centerX" id="jK4-ze-JeN"/>
                             <constraint firstItem="0KD-IZ-Eb9" firstAttribute="centerX" secondItem="UV5-gF-SK1" secondAttribute="centerX" id="jOw-Un-e25"/>
-                            <constraint firstItem="xPg-8g-nBF" firstAttribute="leading" secondItem="WZR-7Y-fgE" secondAttribute="leadingMargin" id="nX1-Fe-XmN"/>
                             <constraint firstItem="UV5-gF-SK1" firstAttribute="top" secondItem="0KD-IZ-Eb9" secondAttribute="bottom" constant="17" id="qdV-ex-ldy"/>
                             <constraint firstItem="wIw-Ky-0Ck" firstAttribute="leading" secondItem="WZR-7Y-fgE" secondAttribute="leadingMargin" constant="71" id="quu-tj-T9I"/>
                         </constraints>
